# vulkan-hello

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml  release.yml
include/: CMakeLists.txt  config.hpp  config.hpp.in  helloTriangle.hpp  queueFamilyIndices.hpp  swapChainSupportDetails.hpp  uniformBufferObject.hpp  vertex.hpp
pkg/: CMakeLists.txt
pkg/arch/: .SRCINFO  PKGBUILD  build-deps.sh  install-deps.sh
pkg/ubuntu/: CMakeLists.txt
share/: CMakeLists.txt
share/shaders/: CMakeLists.txt  shader.frag  shader.vert
share/textures/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  config.cpp.in  config.hpp  depth.cpp  depth.hpp  engine.cpp  engine.hpp  exePath.cpp  exePath.hpp  helloTriangle.cpp  helloTriangle.hpp  injector.hpp  input.cpp  input.hpp  main.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  singleCommand.cpp  singleCommand.hpp  stb_image.cpp  swapChainSupportDetails.cpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/component/: collider.hpp  meshInstance.hpp  properties.hpp  transform.hpp
src/system/: CMakeLists.txt  game.cpp  game.hpp  mawaru.cpp  mawaru.hpp  physics.cpp  physics.hpp
src/vulkan/: CMakeLists.txt  allocator.cpp  allocator.hpp  depth.cpp  depth.hpp  frameData.cpp  frameData.hpp  pipeline.cpp  pipeline.hpp  queueFamilyIndices.hpp  renderer.cpp  renderer.hpp  shaderStorageBufferObject.hpp  swapChainSupportDetails.cpp  swapChainSupportDetails.hpp  uniformBufferObject.hpp  vma.cpp
